# photo_recognition_bot

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  cursovaya.cpp  cursovaya.h  dialogs.h  localStorage.h  storagerecord.h  storageuser.h
config/: dialogs.json
documentation/html/: annotated.html  annotated_dup.js  class_record-members.html  class_record.html  class_record.js  class_user-members.html  class_user.html  class_user.js  class_user__coll__graph.map  class_user__coll__graph.md5  class_user_abc59393d99ed212da3c193cd4d5be1da_icgraph.map  class_user_abc59393d99ed212da3c193cd4d5be1da_icgraph.md5  class_user_ac7ad8bba285cd87426890aa3a47aa1b7_icgraph.dot  class_user_ac7ad8bba285cd87426890aa3a47aa1b7_icgraph.map  class_user_ae0c649a678270d65613b2f739dca1c32_icgraph.dot  class_user_ae0c649a678270d65613b2f739dca1c32_icgraph.map  class_user_ae7a1935b898dc85a8800537896094fdd_icgraph.map  class_user_storage-members.html  class_user_storage.html  class_user_storage.js  class_user_storage_a517d664566fb7190ce95e1b5688851ed_icgraph.dot  class_user_storage_a517d664566fb7190ce95e1b5688851ed_icgraph.map  class_user_storage_a517d664566fb7190ce95e1b5688851ed_icgraph.md5  classes.html  cursovaya_8cpp.html  cursovaya_8cpp.js  cursovaya_8cpp__incl.map  cursovaya_8cpp_a402e1429ddec10958e677ac812858088_icgraph.dot  cursovaya_8cpp_a402e1429ddec10958e677ac812858088_icgraph.map  cursovaya_8cpp_a928c7d0bdbe6eea908386a99e384dd99_icgraph.dot  cursovaya_8cpp_a928c7d0bdbe6eea908386a99e384dd99_icgraph.map  cursovaya_8cpp_a928c7d0bdbe6eea908386a99e384dd99_icgraph.md5  cursovaya_8cpp_aaab5e40c5651939de700fd45f93f39f1_cgraph.dot  cursovaya_8cpp_aaab5e40c5651939de700fd45f93f39f1_cgraph.map  cursovaya_8cpp_aaab5e40c5651939de700fd45f93f39f1_cgraph.md5  cursovaya_8cpp_aaab5e40c5651939de700fd45f93f39f1_icgraph.dot  cursovaya_8cpp_aaab5e40c5651939de700fd45f93f39f1_icgraph.map  cursovaya_8cpp_ab208a764a527ab13fd0c8a1a323727b1_icgraph.dot  cursovaya_8cpp_ab208a764a527ab13fd0c8a1a323727b1_icgraph.map  cursovaya_8cpp_ada2ffbb1419621e1b3bfe18b3fbe748c_icgraph.map  (+97 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_1.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_7.js  variables_9.js  variables_a.js  (+2 more)
documentation/rtf/: class_user__coll__graph.dot  class_user_abc59393d99ed212da3c193cd4d5be1da_icgraph.dot  class_user_ac7ad8bba285cd87426890aa3a47aa1b7_icgraph.md5  class_user_ae0c649a678270d65613b2f739dca1c32_icgraph.md5  class_user_ae7a1935b898dc85a8800537896094fdd_icgraph.dot  class_user_ae7a1935b898dc85a8800537896094fdd_icgraph.md5  cursovaya_8cpp__incl.dot  cursovaya_8cpp__incl.md5  cursovaya_8cpp_a402e1429ddec10958e677ac812858088_icgraph.md5  cursovaya_8cpp_aaab5e40c5651939de700fd45f93f39f1_icgraph.md5  cursovaya_8cpp_ab208a764a527ab13fd0c8a1a323727b1_icgraph.md5  cursovaya_8cpp_ada2ffbb1419621e1b3bfe18b3fbe748c_icgraph.dot  cursovaya_8cpp_ada2ffbb1419621e1b3bfe18b3fbe748c_icgraph.md5  cursovaya_8cpp_afb712dc6852069deebdc10280e811305_icgraph.dot  cursovaya_8cpp_afb712dc6852069deebdc10280e811305_icgraph.md5  cursovaya_8h__dep__incl.dot  cursovaya_8h__incl.dot  cursovaya_8h__incl.md5  dialogs_8h__dep__incl.dot  dialogs_8h_a475efb530cfaab87a4718869cca8639e_cgraph.dot  dialogs_8h_a475efb530cfaab87a4718869cca8639e_cgraph.md5  dialogs_8h_a475efb530cfaab87a4718869cca8639e_icgraph.dot  dialogs_8h_a475efb530cfaab87a4718869cca8639e_icgraph.md5  dialogs_8h_a559f5a14ccb81f21075b5b7294bcfd1c_cgraph.dot  dialogs_8h_a559f5a14ccb81f21075b5b7294bcfd1c_cgraph.md5  dialogs_8h_a559f5a14ccb81f21075b5b7294bcfd1c_icgraph.md5  dialogs_8h_a587d6340f84849a7cb09cace3f97cc44_icgraph.dot  dialogs_8h_a60709d434b7d5534c1ab08ecffbd7661_icgraph.md5  dialogs_8h_a87607e98dcf23cff0bed92b7efe39465_icgraph.dot  dialogs_8h_aa61017178f7b6622a86a4889335ff700_icgraph.md5  dialogs_8h_aae6622f674c2934dd48b08328391a3c3_cgraph.dot  dialogs_8h_aae6622f674c2934dd48b08328391a3c3_cgraph.md5  dialogs_8h_aae6622f674c2934dd48b08328391a3c3_icgraph.dot  dialogs_8h_aae6622f674c2934dd48b08328391a3c3_icgraph.md5  dialogs_8h_abccf0729d4972f706dce48b73d3b2b6a_cgraph.md5  dialogs_8h_abccf0729d4972f706dce48b73d3b2b6a_icgraph.md5  dialogs_8h_ac5d0a556a84f6f0fdd486463c35155b5_cgraph.md5  dialogs_8h_ac5d0a556a84f6f0fdd486463c35155b5_icgraph.md5  dialogs_8h_aceddf3376fac8a9ad9c1e7f72be6d818_icgraph.dot  dialogs_8h_aceddf3376fac8a9ad9c1e7f72be6d818_icgraph.md5  (+7 more)
